# chancypolyhedra

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  app.cpp  app.hpp  conanbuildinfo.cmake  conanfile.py  conanfile.txt  conaninfo.txt  logger.cpp  logger.hpp  main.cpp
API/: CMakeLists.txt  html.h  logger.cpp  logger.h  main.cpp
assets/: index.html
chancypolyhedra/: chancypolyhedra.cpp  chancypolyhedra.h  chancypolyhedra.hpp  grammar.hpp  randutils.hpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp
controllers/: chancypolyhedra_controller.hpp  controller.hpp
frontend/: index.html  package.json
frontend/src/components/: Home.vue
tests/: CMakeLists.txt  assets.cpp  basic.cpp  chancypolyhedra_controller.cpp  distributions.cpp  env.hpp  main.cpp  webserver.cpp
